updating problem description

--- a/homework_5.html
+++ b/homework_5.html
@@ -538,7 +538,7 @@ div.tocify {
 </div>
 <div id="problem-3" class="section level3">
 <h3>Problem 3</h3>
-<p>When designing an experiment or analysis, a common question is whether it is likely that a true effect will be detected – put differently, whether a false null hypothesis will be rejected. The probability that a false null hypothesis is rejected is referred to as power, and it depends on several factors, including: the sample size; the effect size; and the error variance. In this problem, you will conduct a simulation to explore power in a simple linear regression.</p>
+<p>When designing an experiment or analysis, a common question is whether it is likely that a true effect will be detected – put differently, whether a false null hypothesis will be rejected. The probability that a false null hypothesis is rejected is referred to as power, and it depends on several factors, including: the sample size; the effect size; and the error variance. In this problem, you will conduct a simulation to explore power in a one-sample t-test.</p>
 <p>First set the following design elements:</p>
 <ul>
 <li>Fix <span class="math inline">\(n=30\)</span></li>
