--- a/linear_models.html
+++ b/linear_models.html
@@ -489,7 +489,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/nW796MKc2AE"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -912,8 +912,7 @@ manhattan_nest_lm_res =
     victim_age = as.numeric(victim_age),
     victim_race = fct_relevel(victim_race, &quot;White&quot;)) %&gt;% 
   select(resolved, victim_age, victim_race, victim_sex)</code></pre>
-<pre><code>## 
-## ── Column specification ────────────────────────────────────────────────────────
+<pre><code>## Parsed with column specification:
 ## cols(
 ##   uid = col_character(),
 ##   reported_date = col_double(),
