--- a/cross_validation.html
+++ b/cross_validation.html
@@ -499,18 +499,15 @@ div.tocify {
 <p>I’ll write code for today’s content in a new R Markdown document called <code>cross_validation.Rmd</code> in the <code>linear_models</code> directory / repo. The code chunk below loads the usual packages (plus <code>mgcv</code>) and sets a seed for reproducibility.</p>
 <pre class="r"><code>library(tidyverse)
 library(modelr)
-## Warning: package &#39;modelr&#39; was built under R version 3.6.3
-library(mgcv)
-## Warning: package &#39;mgcv&#39; was built under R version 3.6.3
-## Loading required package: nlme
+library(mgcv)</code></pre>
+<pre><code>## Loading required package: nlme</code></pre>
+<pre><code>## 
+## Attaching package: &#39;nlme&#39;</code></pre>
+<pre><code>## The following object is masked from &#39;package:dplyr&#39;:
 ## 
-## Attaching package: &#39;nlme&#39;
-## The following object is masked from &#39;package:dplyr&#39;:
-## 
-##     collapse
-## This is mgcv 1.8-31. For overview type &#39;help(&quot;mgcv-package&quot;)&#39;.
-
-set.seed(1)</code></pre>
+##     collapse</code></pre>
+<pre><code>## This is mgcv 1.8-33. For overview type &#39;help(&quot;mgcv-package&quot;)&#39;.</code></pre>
+<pre class="r"><code>set.seed(1)</code></pre>
 <div id="cv-by-hand" class="section level3">
 <h3>CV “by hand”</h3>
 <p>We’ll start with a simulated example. The code chunk below generates data under a non-linear model; I like to use this setting because “model complexity” is easiest for me to understand when I can see it.</p>
@@ -523,7 +520,7 @@ set.seed(1)</code></pre>
 
 nonlin_df %&gt;% 
   ggplot(aes(x = x, y = y)) + 
-  geom_point() + theme_bw()</code></pre>
+  geom_point()</code></pre>
 <p><img src="cross_validation_files/figure-html/unnamed-chunk-3-1.png" width="90%" /></p>
 <p>I’ll split this data into training and test sets (using <code>anti_join</code>!!), and replot showing the split. Our goal will be to use the training data (in black) to build candidate models, and then see how those models predict in the testing data (in red).</p>
 <pre class="r"><code>train_df = sample_n(nonlin_df, 80)
@@ -544,8 +541,7 @@ wiggly_mod = mgcv::gam(y ~ s(x, k = 30), sp = 10e-6, data = train_df)</code></pr
   ggplot(aes(x = x, y = y)) + geom_point() + 
   geom_line(aes(y = pred), color = &quot;red&quot;)</code></pre>
 <p><img src="cross_validation_files/figure-html/unnamed-chunk-6-1.png" width="90%" /></p>
-<pre class="r"><code>
-train_df %&gt;% 
+<pre class="r"><code>train_df %&gt;% 
   add_predictions(wiggly_mod) %&gt;% 
   ggplot(aes(x = x, y = y)) + geom_point() + 
   geom_line(aes(y = pred), color = &quot;red&quot;)</code></pre>
@@ -561,12 +557,12 @@ train_df %&gt;%
 <p><img src="cross_validation_files/figure-html/unnamed-chunk-7-1.png" width="90%" /></p>
 <p>A quick visual inspection suggests that the linear model is too simple, the standard <code>gam</code> fit is pretty good, and the wiggly <code>gam</code> fit is too complex. Put differently, the linear model is too simple and, no matter what training data we use, will never capture the true relationship between variables – it will be consistently wrong due to its simplicity, and is therefore biased. The wiggly fit, on the other hand, is chasing data points and will change a lot from one training dataset to the the next – it will be consistently wrong due to its complexity, and is therefore highly variable. Both are bad!</p>
 <p>As a next step in my CV procedure, I’ll compute root mean squared errors (RMSEs) for each model.</p>
-<pre class="r"><code>rmse(linear_mod, test_df)
-## [1] 0.7052956
-rmse(smooth_mod, test_df)
-## [1] 0.2221774
-rmse(wiggly_mod, test_df)
-## [1] 0.289051</code></pre>
+<pre class="r"><code>rmse(linear_mod, test_df)</code></pre>
+<pre><code>## [1] 0.7052956</code></pre>
+<pre class="r"><code>rmse(smooth_mod, test_df)</code></pre>
+<pre><code>## [1] 0.2221774</code></pre>
+<pre class="r"><code>rmse(wiggly_mod, test_df)</code></pre>
+<pre><code>## [1] 0.289051</code></pre>
 <p>The <code>modelr</code> has other outcome measures – RMSE is the most common, but median absolute deviation is pretty common as well.</p>
 <p>The RMSEs are suggestive that both nonlinear models work better than the linear model, and that the smooth fit is better than the wiggly fit. However, to get a sense of model stability we really need to iterate this whole process. Of course, this could be done using loops but that’s a hassle …</p>
 </div>
@@ -576,8 +572,8 @@ rmse(wiggly_mod, test_df)
 <pre class="r"><code>cv_df = 
   crossv_mc(nonlin_df, 100) </code></pre>
 <p><code>crossv_mc</code> tries to be smart about memory – rather than repeating the dataset a bunch of times, it saves the data once and stores the indexes for each training / testing split using a <code>resample</code> object. This can be coerced to a dataframe, and can often be treated exactly like a dataframe. However, it’s not compatible with <code>gam</code>, so we have to convert each training and testing dataset (and lose that nice memory-saving stuff in the process) using the code below. It’s worth noting, though, that if all the models you want to fit use <code>lm</code>, you can skip this.</p>
-<pre class="r"><code>cv_df %&gt;% pull(train) %&gt;% .[[1]] %&gt;% as_tibble
-## # A tibble: 79 x 3
+<pre class="r"><code>cv_df %&gt;% pull(train) %&gt;% .[[1]] %&gt;% as_tibble</code></pre>
+<pre><code>## # A tibble: 79 x 3
 ##       id      x       y
 ##    &lt;int&gt;  &lt;dbl&gt;   &lt;dbl&gt;
 ##  1     1 0.266   1.11  
@@ -590,9 +586,9 @@ rmse(wiggly_mod, test_df)
 ##  8     9 0.629   0.0878
 ##  9    10 0.0618  0.392 
 ## 10    11 0.206   1.63  
-## # ... with 69 more rows
-cv_df %&gt;% pull(test) %&gt;% .[[1]] %&gt;% as_tibble
-## # A tibble: 21 x 3
+## # … with 69 more rows</code></pre>
+<pre class="r"><code>cv_df %&gt;% pull(test) %&gt;% .[[1]] %&gt;% as_tibble</code></pre>
+<pre><code>## # A tibble: 21 x 3
 ##       id      x      y
 ##    &lt;int&gt;  &lt;dbl&gt;  &lt;dbl&gt;
 ##  1     5 0.202   1.33 
@@ -605,9 +601,8 @@ cv_df %&gt;% pull(test) %&gt;% .[[1]] %&gt;% as_tibble
 ##  8    42 0.647   0.158
 ##  9    47 0.0233 -0.148
 ## 10    56 0.0995  1.13 
-## # ... with 11 more rows
-
-cv_df =
+## # … with 11 more rows</code></pre>
+<pre class="r"><code>cv_df =
   cv_df %&gt;% 
   mutate(
     train = map(train, as_tibble),
@@ -615,12 +610,14 @@ cv_df =
 <p>I now have many training and testing datasets, and I’d like to fit my candidate models above and assess prediction accuracy as I did for the single training / testing split. To do this, I’ll fit models and obtain RMSEs using <code>mutate</code> + <code>map</code> &amp; <code>map2</code>.</p>
 <pre class="r"><code>cv_df = 
   cv_df %&gt;% 
-  mutate(linear_mod  = map(train, ~lm(y ~ x, data = .x)),
-         smooth_mod  = map(train, ~mgcv::gam(y ~ s(x), data = .x)),
-         wiggly_mod  = map(train, ~gam(y ~ s(x, k = 30), sp = 10e-6, data = .x))) %&gt;% 
-  mutate(rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_wiggly = map2_dbl(wiggly_mod, test, ~rmse(model = .x, data = .y)))</code></pre>
+  mutate(
+    linear_mod  = map(train, ~lm(y ~ x, data = .x)),
+    smooth_mod  = map(train, ~mgcv::gam(y ~ s(x), data = .x)),
+    wiggly_mod  = map(train, ~gam(y ~ s(x, k = 30), sp = 10e-6, data = .x))) %&gt;% 
+  mutate(
+    rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_wiggly = map2_dbl(wiggly_mod, test, ~rmse(model = .x, data = .y)))</code></pre>
 <p>I’m mostly focused on RMSE as a way to compare these models, and the plot below shows the distribution of RMSE values for each candidate model.</p>
 <pre class="r"><code>cv_df %&gt;% 
   select(starts_with(&quot;rmse&quot;)) %&gt;% 
@@ -638,17 +635,17 @@ cv_df =
 <div id="example-child-growth" class="section level3">
 <h3>Example: Child Growth</h3>
 <p>We’ll take a quick look at an example involving real data and more realistic candidate model. A cross-sectional study of Nepalese children was carried out to understand the relationships between various measures of growth, including weight and arm circumference. You can download the data <a href="./data/nepalese_children.csv">here</a>; the code chunk below imports the data and plots the variables we’ll focus on.</p>
-<pre class="r"><code>child_growth = read_csv(&quot;./data/nepalese_children.csv&quot;)
-## Parsed with column specification:
+<pre class="r"><code>child_growth = read_csv(&quot;./data/nepalese_children.csv&quot;)</code></pre>
+<pre><code>## 
+## ── Column specification ────────────────────────────────────────────────────────
 ## cols(
 ##   age = col_double(),
 ##   sex = col_double(),
 ##   weight = col_double(),
 ##   height = col_double(),
 ##   armc = col_double()
-## )
-
-child_growth %&gt;% 
+## )</code></pre>
+<pre class="r"><code>child_growth %&gt;% 
   ggplot(aes(x = weight, y = armc)) + 
   geom_point(alpha = .5)</code></pre>
 <p><img src="cross_validation_files/figure-html/unnamed-chunk-13-1.png" width="90%" /></p>
@@ -657,7 +654,7 @@ child_growth %&gt;%
   child_growth %&gt;% 
   mutate(weight_cp = (weight &gt; 7) * (weight - 7))</code></pre>
 <p>The code chunk below fits each of the candidate models to the full dataset. The piecewise linear model is nested in the linear model and could be assessed using statistical significance, but the smooth model is not nested in anything else. (Also, comparing a piecewise model with a changepoint at 7 to a piecewise model with a changepoint at 8 would be a non-nested comparison…)</p>
-<pre class="r"><code>linear_mod    = lm(armc ~ weight, data = child_growth)
+<pre class="r"><code>linear_mod = lm(armc ~ weight, data = child_growth)
 pwl_mod    = lm(armc ~ weight + weight_cp, data = child_growth)
 smooth_mod = gam(armc ~ s(weight), data = child_growth)</code></pre>
 <p>As before, I’ll plot the three models to get intuition for goodness of fit.</p>
@@ -678,16 +675,18 @@ smooth_mod = gam(armc ~ s(weight), data = child_growth)</code></pre>
 <p>Next I’ll use <code>mutate</code> + <code>map</code> &amp; <code>map2</code> to fit models to training data and obtain corresponding RMSEs for the testing data.</p>
 <pre class="r"><code>cv_df = 
   cv_df %&gt;% 
-  mutate(linear_mod  = map(train, ~lm(armc ~ weight, data = .x)),
-         pwl_mod     = map(train, ~lm(armc ~ weight + weight_cp, data = .x)),
-         smooth_mod  = map(train, ~gam(armc ~ s(weight), data = as_tibble(.x)))) %&gt;% 
-  mutate(rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_pwl    = map2_dbl(pwl_mod, test, ~rmse(model = .x, data = .y)),
-         rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)))</code></pre>
+  mutate(
+    linear_mod  = map(train, ~lm(armc ~ weight, data = .x)),
+    pwl_mod     = map(train, ~lm(armc ~ weight + weight_cp, data = .x)),
+    smooth_mod  = map(train, ~gam(armc ~ s(weight), data = as_tibble(.x)))) %&gt;% 
+  mutate(
+    rmse_linear = map2_dbl(linear_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_pwl    = map2_dbl(pwl_mod, test, ~rmse(model = .x, data = .y)),
+    rmse_smooth = map2_dbl(smooth_mod, test, ~rmse(model = .x, data = .y)))</code></pre>
 <p>Finally, I’ll plot the prediction error distribution for each candidate model.</p>
 <pre class="r"><code>cv_df %&gt;% 
   select(starts_with(&quot;rmse&quot;)) %&gt;% 
-pivot_longer(
+  pivot_longer(
     everything(),
     names_to = &quot;model&quot;, 
     values_to = &quot;rmse&quot;,
@@ -765,7 +764,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
