--- a/bootstrapping.html
+++ b/bootstrapping.html
@@ -488,7 +488,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/jOoNgeIDGWo"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -532,8 +532,8 @@ sim_df %&gt;%
   ggplot(aes(x = x, y = y)) + 
   geom_point(alpha = .5) +
   stat_smooth(method = &quot;lm&quot;) +
-  facet_grid(~data_source) 
-## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
+  facet_grid(~data_source) </code></pre>
+<pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
 <p><img src="bootstrapping_files/figure-html/unnamed-chunk-4-1.png" width="90%" /></p>
 <p>These datasets have roughly the same overall variance, but the left panel shows data with constant variance and the right panel shows data with non-constant variance. For this reason, ordinary least squares should provide reasonable estimates in both cases, but inference is standard inference approaches may only be justified for the data on the left.</p>
 <p>The output below shows results from fitting simple linear regressions to both datasets.</p>
@@ -567,8 +567,7 @@ sim_df %&gt;%
 </tr>
 </tbody>
 </table>
-<pre class="r"><code>
-lm(y ~ x, data = sim_df_nonconst) %&gt;% 
+<pre class="r"><code>lm(y ~ x, data = sim_df_nonconst) %&gt;% 
   broom::tidy() %&gt;% 
   knitr::kable(digits = 3)</code></pre>
 <table>
@@ -611,8 +610,8 @@ lm(y ~ x, data = sim_df_nonconst) %&gt;%
 <pre class="r"><code>boot_sample(sim_df_nonconst) %&gt;% 
   ggplot(aes(x = x, y = y)) + 
   geom_point(alpha = .5) +
-  stat_smooth(method = &quot;lm&quot;)
-## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
+  stat_smooth(method = &quot;lm&quot;)</code></pre>
+<pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
 <p><img src="bootstrapping_files/figure-html/unnamed-chunk-7-1.png" width="90%" /></p>
 <p>That looks about right. In comparison with the original data, the bootstrap sample has the same characteristics but isn’t a perfect duplicate – some original data points appear more than once, others don’t appear at all.</p>
 </div>
@@ -625,30 +624,28 @@ lm(y ~ x, data = sim_df_nonconst) %&gt;%
     strap_number = 1:1000,
     strap_sample = rerun(1000, boot_sample(sim_df_nonconst))
   )
-## Warning: `data_frame()` is deprecated, use `tibble()`.
-## This warning is displayed once per session.
 
-boot_straps
-## # A tibble: 1,000 x 2
+boot_straps</code></pre>
+<pre><code>## # A tibble: 1,000 x 2
 ##    strap_number strap_sample      
 ##           &lt;int&gt; &lt;list&gt;            
-##  1            1 &lt;tibble [250 x 3]&gt;
-##  2            2 &lt;tibble [250 x 3]&gt;
-##  3            3 &lt;tibble [250 x 3]&gt;
-##  4            4 &lt;tibble [250 x 3]&gt;
-##  5            5 &lt;tibble [250 x 3]&gt;
-##  6            6 &lt;tibble [250 x 3]&gt;
-##  7            7 &lt;tibble [250 x 3]&gt;
-##  8            8 &lt;tibble [250 x 3]&gt;
-##  9            9 &lt;tibble [250 x 3]&gt;
-## 10           10 &lt;tibble [250 x 3]&gt;
-## # ... with 990 more rows</code></pre>
+##  1            1 &lt;tibble [250 × 3]&gt;
+##  2            2 &lt;tibble [250 × 3]&gt;
+##  3            3 &lt;tibble [250 × 3]&gt;
+##  4            4 &lt;tibble [250 × 3]&gt;
+##  5            5 &lt;tibble [250 × 3]&gt;
+##  6            6 &lt;tibble [250 × 3]&gt;
+##  7            7 &lt;tibble [250 × 3]&gt;
+##  8            8 &lt;tibble [250 × 3]&gt;
+##  9            9 &lt;tibble [250 × 3]&gt;
+## 10           10 &lt;tibble [250 × 3]&gt;
+## # … with 990 more rows</code></pre>
 <p>We can do a few of quick checks to make sure this has worked as intended. First we’ll look at a couple of bootstrap samples.</p>
 <pre class="r"><code>boot_straps %&gt;% 
   filter(strap_number %in% 1:2) %&gt;% 
   mutate(strap_sample = map(strap_sample, ~arrange(.x, x))) %&gt;% 
-  pull(strap_sample)
-## [[1]]
+  pull(strap_sample)</code></pre>
+<pre><code>## [[1]]
 ## # A tibble: 250 x 3
 ##         x   error       y
 ##     &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;
@@ -662,7 +659,7 @@ boot_straps
 ##  8 -0.606 -0.106   0.0774
 ##  9 -0.536  0.0227  0.413 
 ## 10 -0.524 -0.536  -0.106 
-## # ... with 240 more rows
+## # … with 240 more rows
 ## 
 ## [[2]]
 ## # A tibble: 250 x 3
@@ -678,7 +675,7 @@ boot_straps
 ##  8 -0.641 -0.416 -0.338 
 ##  9 -0.606 -0.106  0.0774
 ## 10 -0.606 -0.106  0.0774
-## # ... with 240 more rows</code></pre>
+## # … with 240 more rows</code></pre>
 <p>Seems okay – some values are repeated, some don’t appear in both datasets. Next I’ll use <code>ggplot</code> to show some of these datasets, and to include a linear fit for each.</p>
 <pre class="r"><code>boot_straps %&gt;% 
   filter(strap_number %in% 1:3) %&gt;% 
@@ -686,8 +683,8 @@ boot_straps
   ggplot(aes(x = x, y = y)) + 
   geom_point(alpha = .5) +
   stat_smooth(method = &quot;lm&quot;, se = FALSE) +
-  facet_grid(~strap_number) 
-## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
+  facet_grid(~strap_number) </code></pre>
+<pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
 <p><img src="bootstrapping_files/figure-html/unnamed-chunk-10-1.png" width="90%" /></p>
 <p>This shows some of the differences across bootstrap samples, and shows that the fitted regression lines aren’t the same for every bootstrap sample.</p>
 </div>
@@ -701,14 +698,13 @@ boot_straps
     models = map(strap_sample, ~lm(y ~ x, data = .x) ),
     results = map(models, broom::tidy)) %&gt;% 
   select(-strap_sample, -models) %&gt;% 
-  unnest() %&gt;% 
-  group_by(term) %&gt;% 
-  summarize(boot_se = sd(estimate))
-## Warning: `cols` is now required.
-## Please use `cols = c(results)`
+  unnest(results) 
 
 bootstrap_results %&gt;% 
+  group_by(term) %&gt;% 
+  summarize(boot_se = sd(estimate)) %&gt;% 
   knitr::kable(digits = 3)</code></pre>
+<pre><code>## `summarise()` ungrouping output (override with `.groups` argument)</code></pre>
 <table>
 <thead>
 <tr class="header">
@@ -728,14 +724,26 @@ bootstrap_results %&gt;%
 </tbody>
 </table>
 <p>Comparing these to the results of ordinary least squares, the standard error for the intercept is much smaller and the standard error for the intercept is a bit larger. This is reasonable, given the non-constant variance in the data given smaller residuals around zero and larger residuals in the the tails of the <code>x</code> distribution.</p>
+<p>I can also use the estimates across bootstrap samples to construct a confidence interval. For a 95% CI, we might try to exclude the lower and upper 2.5% of the distribution of parameter estimates across “repeated” samples. The code below will do that.</p>
+<pre class="r"><code>bootstrap_results %&gt;% 
+  group_by(term) %&gt;% 
+  summarize(
+    ci_lower = quantile(estimate, 0.025), 
+    ci_upper = quantile(estimate, 0.975))</code></pre>
+<pre><code>## `summarise()` ungrouping output (override with `.groups` argument)</code></pre>
+<pre><code>## # A tibble: 2 x 3
+##   term        ci_lower ci_upper
+##   &lt;chr&gt;          &lt;dbl&gt;    &lt;dbl&gt;
+## 1 (Intercept)     1.79     2.08
+## 2 x               2.91     3.31</code></pre>
 <p>For a simple linear regression, we can show the fitted lines for each bootstrap sample to build intuition for these results.</p>
 <pre class="r"><code>boot_straps %&gt;% 
   unnest(strap_sample) %&gt;% 
   ggplot(aes(x = x, y = y)) + 
   geom_line(aes(group = strap_number), stat = &quot;smooth&quot;, method = &quot;lm&quot;, se = FALSE, alpha = .1, color = &quot;blue&quot;) +
-  geom_point(data = sim_df_nonconst, alpha = .5)
-## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
-<p><img src="bootstrapping_files/figure-html/unnamed-chunk-12-1.png" width="90%" /></p>
+  geom_point(data = sim_df_nonconst, alpha = .5)</code></pre>
+<pre><code>## `geom_smooth()` using formula &#39;y ~ x&#39;</code></pre>
+<p><img src="bootstrapping_files/figure-html/unnamed-chunk-13-1.png" width="90%" /></p>
 <p>In comparison to the standard error bands in our previous plot (which are based on OLS), the distribution of regression lines is narrower near <span class="math inline">\(x = 0\)</span> and wider at the ends of the <span class="math inline">\(x\)</span> distribution.</p>
 </div>
 <div id="bootstrap" class="section level3">
@@ -745,12 +753,10 @@ bootstrap_results %&gt;%
   sim_df_nonconst %&gt;% 
   modelr::bootstrap(n = 1000)
 
-boot_straps$strap[[1]]
-## &lt;resample [250 x 3]&gt; 8, 132, 69, 225, 180, 122, 34, 170, 216, 122, ...
-as_data_frame(boot_straps$strap[[1]])
-## Warning: `as_data_frame()` is deprecated, use `as_tibble()` (but mind the new semantics).
-## This warning is displayed once per session.
-## # A tibble: 250 x 3
+boot_straps$strap[[1]]</code></pre>
+<pre><code>## &lt;resample [250 x 3]&gt; 8, 132, 69, 225, 180, 122, 34, 170, 216, 122, ...</code></pre>
+<pre class="r"><code>as_data_frame(boot_straps$strap[[1]])</code></pre>
+<pre><code>## # A tibble: 250 x 3
 ##         x  error     y
 ##     &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt;
 ##  1  1.74   0.747  7.96
@@ -763,7 +769,7 @@ as_data_frame(boot_straps$strap[[1]])
 ##  8  1.21   1.55   7.17
 ##  9  2.52   0.528 10.1 
 ## 10  2.34   0.488  9.52
-## # ... with 240 more rows</code></pre>
+## # … with 240 more rows</code></pre>
 <p>Let’s repeat our analysis pipeline using the <code>bootstrap</code> function instead of our own process for drawing samples with replacement.</p>
 <pre class="r"><code>sim_df_nonconst %&gt;% 
   modelr::bootstrap(n = 1000) %&gt;% 
@@ -773,8 +779,9 @@ as_data_frame(boot_straps$strap[[1]])
   select(-strap, -models) %&gt;% 
   unnest(results) %&gt;% 
   group_by(term) %&gt;% 
-  summarize(boot_se = sd(estimate))
-## # A tibble: 2 x 2
+  summarize(boot_se = sd(estimate))</code></pre>
+<pre><code>## `summarise()` ungrouping output (override with `.groups` argument)</code></pre>
+<pre><code>## # A tibble: 2 x 2
 ##   term        boot_se
 ##   &lt;chr&gt;         &lt;dbl&gt;
 ## 1 (Intercept)  0.0790
@@ -788,8 +795,9 @@ as_data_frame(boot_straps$strap[[1]])
   select(-strap, -models) %&gt;% 
   unnest(results) %&gt;% 
   group_by(term) %&gt;% 
-  summarize(boot_se = sd(estimate))
-## # A tibble: 2 x 2
+  summarize(boot_se = sd(estimate))</code></pre>
+<pre><code>## `summarise()` ungrouping output (override with `.groups` argument)</code></pre>
+<pre><code>## # A tibble: 2 x 2
 ##   term        boot_se
 ##   &lt;chr&gt;         &lt;dbl&gt;
 ## 1 (Intercept)  0.101 
@@ -812,9 +820,8 @@ nyc_airbnb =
 <p>I’ll make a quick plot showing these data, with particular emphasis on the features I’m interested in analyzing: <code>price</code> as an outcome with <code>stars</code> and <code>room_type</code> as covariates.</p>
 <pre class="r"><code>nyc_airbnb %&gt;% 
   ggplot(aes(x = stars, y = price, color = room_type)) + 
-  geom_point() 
-## Warning: Removed 9962 rows containing missing values (geom_point).</code></pre>
-<p><img src="bootstrapping_files/figure-html/unnamed-chunk-17-1.png" width="90%" /></p>
+  geom_point() </code></pre>
+<p><img src="bootstrapping_files/figure-html/unnamed-chunk-18-1.png" width="90%" /></p>
 <p>In this plot (and in <a href="linear_models.html">linear models</a>, we noticed that some large outliers in price might affect estimates and inference for the association between star rating and price. Because estimates are likely to be sensitive to those outliers and “usual” rules for inference may not apply, the code chunk below uses the bootstrap to examine the distribution of regression coefficients under repeated sampling.</p>
 <pre class="r"><code>nyc_airbnb %&gt;% 
   filter(boro == &quot;Manhattan&quot;) %&gt;% 
@@ -826,7 +833,7 @@ nyc_airbnb =
   unnest(results) %&gt;% 
   filter(term == &quot;stars&quot;) %&gt;% 
   ggplot(aes(x = estimate)) + geom_density()</code></pre>
-<p><img src="bootstrapping_files/figure-html/unnamed-chunk-18-1.png" width="90%" /></p>
+<p><img src="bootstrapping_files/figure-html/unnamed-chunk-19-1.png" width="90%" /></p>
 <p>This distribution has a heavy tail extending to low values and a bit of a “shoulder”, features that may be related to the frequency with which large outliers are included in the bootstrap sample.</p>
 </div>
 </div>
@@ -901,7 +908,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
