--- a/cross_validation.html
+++ b/cross_validation.html
@@ -488,7 +488,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/nOIp6J8Uas4"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -506,7 +506,7 @@ library(mgcv)</code></pre>
 <pre><code>## The following object is masked from &#39;package:dplyr&#39;:
 ## 
 ##     collapse</code></pre>
-<pre><code>## This is mgcv 1.8-33. For overview type &#39;help(&quot;mgcv-package&quot;)&#39;.</code></pre>
+<pre><code>## This is mgcv 1.8-31. For overview type &#39;help(&quot;mgcv-package&quot;)&#39;.</code></pre>
 <pre class="r"><code>set.seed(1)</code></pre>
 <div id="cv-by-hand" class="section level3">
 <h3>CV “by hand”</h3>
@@ -636,8 +636,7 @@ wiggly_mod = mgcv::gam(y ~ s(x, k = 30), sp = 10e-6, data = train_df)</code></pr
 <h3>Example: Child Growth</h3>
 <p>We’ll take a quick look at an example involving real data and more realistic candidate model. A cross-sectional study of Nepalese children was carried out to understand the relationships between various measures of growth, including weight and arm circumference. You can download the data <a href="./data/nepalese_children.csv">here</a>; the code chunk below imports the data and plots the variables we’ll focus on.</p>
 <pre class="r"><code>child_growth = read_csv(&quot;./data/nepalese_children.csv&quot;)</code></pre>
-<pre><code>## 
-## ── Column specification ────────────────────────────────────────────────────────
+<pre><code>## Parsed with column specification:
 ## cols(
 ##   age = col_double(),
 ##   sex = col_double(),
