wrapping up extra topics

--- a/tidy_text.html
+++ b/tidy_text.html
@@ -487,7 +487,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/Udp2WlvuWHo"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -745,7 +745,7 @@ dynamite_words =
 <li>One of the book’s authors, Julia Silge, has a <a href="https://www.youtube.com/watch?v=0poJP8WQxew">nice video</a> talking about the work</li>
 <li>The other of the book’s authors, Dave Robinson, used the approach to examine Donald Trump’s tweets in this this <a href="http://varianceexplained.org/r/trump-tweets/">blog post</a></li>
 </ul>
-<p>The code that I produced working examples in lecture is <a href="https://github.com/jeff-goldsmith/example_data_wrangling_ii">here</a>.</p>
+<p>The code that I produced working examples in lecture is <a href="https://github.com/p8105/tidytext">here</a>.</p>
 </div>
 
 <br><br>
